welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: ';' expected but integer literal found.
		return |21-a|
                        ^